--- a/Views/Azienda/CalendarioLavoratori.cshtml
+++ b/Views/Azienda/CalendarioLavoratori.cshtml
@@ -2,60 +2,107 @@
 <link rel="stylesheet" href="~/css/calendariolavoratori.css">
 <div class="search-container">
     <form asp-action="CalendarioLavoratori" method="get">
-        <input type="text" id="nome" name="nome" placeholder="Cerca dipendente" />
+        <input class="search" type="text" id="nome" name="nome" placeholder="Cerca dipendente" />
         <input type="hidden" id="annoCorrente" name="annoCorrente" />
         <input type="hidden" id="meseCorrente" name="meseCorrente" />
-        <button type="submit" id="ricarca-button">Cerca</button>
+        <button type="submit" class="search-btn">Cerca</button>
     </form>
 </div>
 
-@if (Model != null && Model.DipendenteTrovato == true)
+@if (Model != null)
 {
-    int meseCorrente = Model.MeseProgrammazione;
-    int annoCorrente = Model.AnnoProgrammazione;
-    string meseTestuale = new DateTime(@Model.AnnoProgrammazione,@Model.MeseProgrammazione , 1).ToString("MMMM");
-    <div> 
-        <form asp-action="CalendarioLavoratori" method="get">
-            <input type="hidden" name="nome" value="@Model.Nome" />
-            <input type="hidden" name="annoCorrente" value="@Model.AnnoProgrammazione" />
-            <input type="hidden" name="meseCorrente" value="@Model.MeseProgrammazione" />
-            <button type="submit" name="direzione" value="precedente"> precedente</button>    
-            <span>@meseTestuale</span> 
-            <span>@annoCorrente</span> 
-            <button type="submit" name="direzione" value="successivo"> successivo</button>
-        </form>
-    </div>
-    <div class="calendar">
-    @for (int i = 1; i <= DateTime.DaysInMonth(Model.AnnoProgrammazione, Model.MeseProgrammazione); i++)
+    @if (Model.DipendenteTrovato)
     {
-        <div class="day">
-            @i
-            @{
-                ProgrammazioneViewModel programmazione = Model.Programmazioni.FirstOrDefault(pm => pm.DataGiorno.Day == i);
-            }
-            @if (programmazione != null)
+        int meseCorrente = Model.MeseProgrammazione;
+        int annoCorrente = Model.AnnoProgrammazione;
+        string meseTestuale = new DateTime(Model.AnnoProgrammazione, Model.MeseProgrammazione, 1).ToString("MMMM");
+        <div>
+            <form asp-action="CalendarioLavoratori" method="get">
+                <input type="hidden" name="nome" value="@Model.Nome" />
+                <input type="hidden" name="annoCorrente" value="@Model.AnnoProgrammazione" />
+                <input type="hidden" name="meseCorrente" value="@Model.MeseProgrammazione" />
+                <div class="month-selector">
+                    <button type="submit" name="direzione" value="precedente">precedente</button>
+                    <span>@meseTestuale</span>
+                    <span>@annoCorrente</span>
+                    <button type="submit" name="direzione" value="successivo">successivo</button>
+                </div>
+            </form>
+        </div>
+        <div class="calendar">
+            @for (int i = 1; i <= DateTime.DaysInMonth(Model.AnnoProgrammazione, Model.MeseProgrammazione); i++)
             {
-                <div class="programmazione">
-                    esiste una programmazione
+                <div class="day">
+                    @i
+                    @{
+                        ProgrammazioneViewModel programmazione = Model.Programmazioni.FirstOrDefault(pm => pm.DataGiorno.Day == i);
+
+                        if (programmazione != null)
+                        {
+                            string cssClass = "";
+                            bool isTimbraturaIrregolare = false; // Da rivedere la logica per questa variabile
+                            bool isTimbraturaRegolare = true; // Da rivedere la logica per questa variabile
+                            TimeSpan durataProgrammata = programmazione.InizioTurno - programmazione.FineTurno;
+
+                            if (programmazione.TimbraturaInizio != null && programmazione.TimbraturaUscita != null)
+                            {
+                                TimeSpan? durataEffettiva = programmazione.TimbraturaInizio - programmazione.TimbraturaUscita;
+                                TimeSpan? differenza = durataProgrammata - durataEffettiva;
+                                if (differenza.HasValue && differenza.Value.TotalMinutes > 15)
+                                {
+                                    isTimbraturaIrregolare = true;
+                                }
+                                else
+                                {
+                                    isTimbraturaRegolare = true;
+                                }
+                            }
+                            bool isFerie = programmazione.GiornoFerie;
+                            bool isPermesso = programmazione.GiornoPermesso;
+                            bool isMalattia = programmazione.GiornoMalattia;
+
+                            if (isTimbraturaRegolare)
+                            {
+                                cssClass = "regolare";
+                            }
+                            if (isTimbraturaIrregolare)
+                            {
+                                cssClass = "irregolare";
+                            }
+                            if (isFerie)
+                            {
+                                cssClass = "ferie";
+                            }
+                            if (isMalattia)
+                            {
+                                cssClass = "malattia";
+                            }
+                            if (isPermesso)
+                            {
+                                cssClass = "permesso";
+                            }
+
+                            <div class="@cssClass">
+                                <i class="fa-solid fa-square-check"></i>
+                                <span>@programmazione.GiornoMalattia</span>
+                            </div>
+                        }
+                    }
                 </div>
             }
         </div>
     }
-    </div>
-    <div>
-        form per inserire o modificare una programmazione 
-    </div>
-}
-else if (Model != null && Model.DipendenteTrovato == false)
-{
-    <div>
-        dipendente nonn trovato
-    </div>
+    else
+    {
+        <div>
+            dipendente non trovato
+        </div>
+    }
 }
 else
 {
     <div>
-        benvenuto nella sezione calndari
+        benvenuto nella sezione calendario
     </div>
 }
 
